--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.4",
+    "mongoose": "^5.13.14",
     "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropdown-select": "^4.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "serve-favicon": "^2.5.0",
