--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.14",
     "morgan": "^1.10.0",
+    "node": "16.x",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropdown-select": "^4.9.0",
