--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "team-up",
   "version": "0.1.0",
+  "engine": {
+    "node": "16.14.2"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
